add notes and model
